Bug 384741 - Wrong ID Reported in Duplicate Dialog
Summary: Wrong ID Reported in Duplicate Dialog
Status: RESOLVED FIXED
Alias: None
Product: KBibTeX
Classification: Applications
Component: User interface (other bugs)
Version First Reported In: git (master)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Thomas Fischer
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-09-15 13:00 UTC by David E. Narvaez
Modified: 2017-09-25 19:29 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
First attempt to fix bug (6.38 KB, patch)
2017-09-21 19:58 UTC, Thomas Fischer
Details

Note You need to log in before you can comment on or make changes to this bug.
Description David E. Narvaez 2017-09-15 13:00:02 UTC
Suppose you have elements with IDs A and B. Then you try changing the element with ID B to have ID A. The dialog reports "The entered id 'B' is already in use for another entry." which is wrong, it should be A.
Comment 1 Thomas Fischer 2017-09-21 19:58:13 UTC
Created attachment 107942 [details]
First attempt to fix bug

Please apply this patch to Git master and see if it fixes your problem.

This patch will also address the situation where the user clears the entry id or macro key, respectively.
Comment 2 Thomas Fischer 2017-09-21 20:10:09 UTC
I saw only after writing this patch and an answer to this bug report that you had proposed a patch on your own in phabricator:
https://phabricator.kde.org/D7838

The patch in attachment 107942 [details] is more complex than your patch in D7838, but attachment 107942 [details] shines by having comments, showing the user both the original and the new id/key, and covering the problem of empty ids/keys.
Therefore, I would go with attachment 107942 [details] as a solution to this bug, but please feel free to comment or suggest changes/improvements.
Comment 3 David E. Narvaez 2017-09-23 23:22:35 UTC
(In reply to Thomas Fischer from comment #2)
> I saw only after writing this patch and an answer to this bug report that
> you had proposed a patch on your own in phabricator:
> https://phabricator.kde.org/D7838
> 
> The patch in attachment 107942 [details] is more complex than your patch in
> D7838, but attachment 107942 [details] shines by having comments, showing
> the user both the original and the new id/key, and covering the problem of
> empty ids/keys.
> Therefore, I would go with attachment 107942 [details] as a solution to this
> bug, but please feel free to comment or suggest changes/improvements.

Works for me.
Comment 4 Thomas Fischer 2017-09-25 19:29:51 UTC
Git commit 1f8a4d7577185c9c7028f9356cdc7526ea106236 by Thomas Fischer.
Committed on 23/09/2017 at 19:24.
Pushed by thomasfischer into branch 'master'.

Handling of empty or duplicate entry ids or macro keys

Improving the handling of empty entry ids or macro keys,
respectively, or entry ids or macro keys, respectively, that
are duplicates of existing entries' ids or macros' keys,
respectively.

For empty ids/keys, a warning is shown and the original
(hopefully valid) id/key is restored.
For duplicate ids/keys, the user is asked to choose between
restoring the original id/key or keeping the new-but-duplicate
id/key.

M  +56   -19   src/gui/element/elementeditor.cpp
M  +2    -3    src/gui/element/elementwidgets.cpp
M  +7    -1    src/gui/element/elementwidgets.h

https://commits.kde.org/kbibtex/1f8a4d7577185c9c7028f9356cdc7526ea106236